--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="/bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
     <script src="/bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -13,7 +14,7 @@
 <nav class="navbar d-flex justify-content-center bg-primary text-white d">
     <h2>Todo App</h2>
 </nav>
-<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
+<div class="container d-flex justify-content-center align-items-center" id="container">
 
 
     <div class="border border-2 border-primary rounded-2 p-4">
@@ -22,7 +23,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" name="task" id="task-input">
                 <button class="btn btn-primary" type="submit">
-                    <i class="fa-solid fa-plus" style="color: #ffffff; font-size: 20px;"></i>
+                    <i class="fa-solid fa-plus"></i>
                 </button>
             </div>
         </form>
@@ -34,7 +35,7 @@
 
                     <% for(let i=0; i < task.length; i++){ %>
                         <div class="d-flex justify-content-between align-items-center mb-1">
-                            <div class="bg-primary p-2 rounded-0 rounded-start" style="width: 100%;">
+                            <div class="bg-primary p-2 rounded-0 rounded-start w-100">
                                 <p class="m-0 text-white">
                                     <%= task[i].task %>
                                 </p>
@@ -43,7 +44,7 @@
 
                                 <button class="btn btn-danger rounded-end rounded-0" value="<%= task[i].task %>"
                                     name="task" type="submit">
-                                    <i class="fa-solid fa-trash" style="color: #ffffff; font-size: 23px;"></i>
+                                    <i class="fa-solid fa-trash"></i>
                                 </button>
                             </form>
                         </div>
